Added blog info

--- a/index.html
+++ b/index.html
@@ -17,25 +17,32 @@
 			</ul>
 		</nav>
 		<div role="main">
-			<h1>Info on old poorly documented computer parts: How to fix your old broken computer</h1>
+			<h1>Info on old poorly documented computer parts: How to fix your old broken computer - NOT BOOTING</h1>
 			<p>This weekend I shipped out my old desktop and had to figure out what was wrong with it. Not only was it broken before, I also had taken it apart and damaged parts.</p>
-			<p>Sound like something you might do? Let's talk through all of the problems I had to solve.</p>
-      
+			<p>Sound like something you might do? Let's talk through all of the problems I had to solve. First, let's list the essential parts I was using.</p>
+			<p>Motherboard: Gigabyte p55a ud3 (you will likely need to update bios to boot from USB)</p>
+			<p>CPU: Intel i7 860 (try not to drop this on things)</p>
+			<p>GPU: Doesn't matter. Just test this in someone else's computer</p>
+			<p>HDD: WD 1TB plugged into ch0 (you will likely need to clean and partition this disk)</p>
+			<p>RAM: ddr3 2x2 (test this in someone else's computer)</p>
+
 
 			<h2>Instructions for the careful: Something is probably broken.</h2>
-			<p>Let's start easy. It's an old computer. Your HDD is likely going to be corrupted. Fix that. On another computer. </p>
-      <p>Next. Power Supply. Get a cheap new one and see if that was the problem. You can do this for 40$. If it's not the problem, keep it. </p>
-      <p>I assume your HDD and PSU were both trashed. Mine were. This still wasn't my problem, though replacing them now allowed my computer to primary boot. </p>
-      <p>Did you upgrade your BIOS? Is your flash drive partitioned correctly? Your Hard Drive? Are all external USB devices unplugged? </p>
-      <p>You're careful - at least now. You feel as though you checked everything. Things are not acting how they are supposed to - they are not acting like others' problems either. </p>
-      <p>But your computer is still not working. Here is my useful information, that I have never seen online. </p>
+			<p>Let's start easy. It's an old computer. Your HDD is likely going to be corrupted. Fix that. On another computer. Wipe it clean and then partition it correctly. Western Digital is usually GPT. You don't want GPT if you are using my exact setup.</p>
+      <p>Next. Power Supply. Get a cheap new one and see if that was the problem. You can do this for 40$. If it's not the problem, keep it. I really would just buy one. This is the only part where you will want a backup next year, and then the year after. This will not be the last time you use it. </p>
+      <p>I assume your HDD and PSU were both trashed. Mine were. This still wasn't my full problem, though replacing them now allowed my computer to primary boot. You either weren't careful or something else is broken.</p>
+      <p>Did you upgrade your BIOS? Is your flash drive partitioned correctly? Your Hard Drive? Are all external USB devices unplugged? If yes, continue reading. </p>
+      <p>You're careful - at least now. You feel as though you checked everything. Things are not acting how they are supposed to - they are not acting like others' problems either. What is going on?</p>
+      <p>Your computer is still not working. Here is my useful information, that I have never seen online. No one but me will honestly suggest you to take tools to your motherboard. It is likely your motherboard though, and if you are going to replace that, you might as well do some work on it first. </p>
 
 
       <h2>Instructions for the careless: You probably broke something.</h2>
-			<p>I knew my problem had something to do with my Motherboard or CPU. In fact, it almost seemed to be both. </p>
-			<p>In my case, a long time ago, when trying to repair the pc, I dropped something on the pins where my CPU is seated. </p>
-			<p>Upon inspecting my pins, I noticed some were bent - and touching! This (of course) is bad. </p>
-      <p>Using a small tool, I was able to bend the pins back into place. I have had no trouble since. </p>
+			<p>I knew my problem had something to do with my Motherboard or CPU. In fact, it almost seemed to be both. Long story short, I decided to check if the hardware connection between my CPU and Mobo was bad. It was!</p>
+			<p>In my case, a long time ago, when trying to repair the pc, I dropped something on the pins where my CPU is seated. Something I didn't know back then (though I know now for sure) is that this is the MOST fragile area to be working with. If you damage something, you often wont even be able to see it. </p>
+			<p>Upon inspecting my pins, I noticed some were bent - and touching! This (of course) is bad. If you come to this point, and have this problem, it is your choice whether or not to do something about it. Most would go buy a new motherboard for the sake of the CPU potentially being the problem. I suggest you take matters into your own hands. </p>
+      			<p>Locate which of your pins are bent out of place. Take note of the general orientation of the pins. Look on the bottom of your CPU to see how the pins should be oriented. Next, go get your glasses and a sturdy toothpick. Comb through the pins until they are all back in place. </p>
+			<p>If you had the same problem as me, booting will now work. Be more careful repairing thing in the future! </p>
+
 
 
       <h1>Post a new comment!</h1>
